# aimnet2calc

./: pyproject.toml
src/aimnet2calc/: __init__.py  calculator.py  models.py
test/: test_calculator.py
